# tbd-slice-shop-cms-django

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
django_project/: settings.py  urls.py
pages/: models.py  services.py  urls.py  views.py
static/css/: sidenav.css
static/js/: connect-streams-min.js
templates/: _base.html  home.html  shop_browser.html
templates/_partials/: shop_results.html
